[package]
authors = ['Jonathan Brown <https://github.com/ethernomad>']
description = 'Substrate pallet to enable integration with Acuity DEX.'
edition = '2021'
homepage = 'https://acuity.social'
license = 'Apache-2.0'
name = 'pallet-acuity-atomic-swap'
repository = 'https://github.com/acuity-social/acuity-atomic-swap-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
serde = { version = "1.0.137", optional = true, default-features = false, features = ["derive"] }
impl-serde = { version = "0.3.2", optional = true, default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    "sp-core/std",
    'pallet-timestamp/std',
    'pallet-balances/std',
		'serde/std',
		"impl-serde/std",
]
