[package]
authors = ['Jonathan Brown <https://github.com/ethernomad>']
description = 'Substrate pallet to enable integration with Acuity DEX.'
edition = '2021'
homepage = 'https://acuity.social'
license = 'Apache-2.0'
name = 'pallet-acuity-atomic-swap'
repository = 'https://github.com/acuity-social/acuity-atomic-swap-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.3.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
serde = { version = "1.0.137", optional = true, default-features = false, features = ["derive"] }
impl-serde = { version = "0.3.2", optional = true, default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    "sp-core/std",
    'pallet-timestamp/std',
    'pallet-balances/std',
		'serde/std',
		"impl-serde/std",
]
