[package]
authors = ['Jonathan Brown <https://github.com/ethernomad>']
description = 'Substrate pallet to enable integration with Acuity DEX.'
edition = '2021'
homepage = 'https://acuity.social'
license = 'Apache-2.0'
name = 'pallet-acuity-atomic-swap'
repository = 'https://github.com/acuity-social/acuity-atomic-swap-pallet'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-support = { version = "27.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-runtime = { version = "30.0.1", default-features = false }
sp-io = { version = "29.0.0", default-features = false }
frame-system = { version = "27.0.0", default-features = false }
pallet-timestamp = { version = "26.0.0", default-features = false }
serde = { version = "1.0.193", default-features = false, features = ["derive"], optional = true }
impl-serde = { version = "0.4.0", default-features = false, optional = true }

[dev-dependencies]
pallet-balances = { version = "27.0.0", default-features = false }
sp-core = { version = "27.0.0", default-features = false }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
		'scale-info/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
		'sp-core/std',
		'pallet-balances/std',
    'pallet-timestamp/std',
		'serde/std',
		'impl-serde/std',
]
