[package]
name = "pallet-acuity-atomic-swap-rpc"
version = "0.1.0"
authors = ["Jonathan Brown <jbrown@acuity.social>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://acuity.social/"
repository = "https://github.com/acuity-social/acuity-atomic-swap-pallet"
description = "RPC interface for the atomic swap pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.3.2" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
pallet-acuity-atomic-swap = { path = ".." }
pallet-acuity-atomic-swap-rpc-runtime-api = { path = "./runtime-api" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
