[package]
name = "pallet-acuity-atomic-swap-rpc-runtime-api"
version = "0.1.0"
description = "RPC runtime API for atomic swap FRAME pallet"
authors = ["Jonathan Brown <jbrown@acuity.social>"]
homepage = "https://acuity.social/"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/acuity-social/acuity-atomic-swap-pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.30" }
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"codec/std",
]
